feat: Repository logic

--- a/RhythmHaven.API/appsettings.json
+++ b/RhythmHaven.API/appsettings.json
@@ -12,7 +12,34 @@
     "TokenValidityInMinutes": 360
   },
   "ConnectionStrings": {
-    "LOCAL_CONNECTION_STRING": "Server=(local);Uid=sa;Pwd=12345;Database=RhythmHavenDatabase;TrustServerCertificate=True"
+    "LOCAL_CONNECTION_STRING": "Server=(local);Uid=sa;Pwd=12345;Database=RhythmHavenDatabase;TrustServerCertificate=True",
+    "AZURE_CONNECTION_STRING": "Data Source=tcp:rhythmhavenapidbserver.database.windows.net,1433;Initial Catalog=RhythmHaven.API_db;User Id=RHaven@rhythmhavenapidbserver;Password=Abc@12345"
+  },
+  "Vnpay": {
+    "TmnCode": "O0G6SAUT",
+    "HashSecret": "73NQWQSELMV1HLIIPORQRI2SUA5TFKRO",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "RefundUrl": "https://sandbox.vnpayment.vn/merchant_webapi/api/transaction",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "ReturnUrl": "https://rhythmhaven.azurewebsites.net/payment/VNpayReturn"
+    //"ReturnUrl": "https://localhost:7101/payment/VNpayReturn"
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1s",
+        "Limit": 5
+      }
+    ]
   },
   "AllowedHosts": "*"
 }
