feat: CRUD Product, Transaction, Cart

--- a/RhythmHaven.API/appsettings.json
+++ b/RhythmHaven.API/appsettings.json
@@ -24,7 +24,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "ReturnUrl": "https://rhythmhaven.azurewebsites.net/payment/VNpayReturn"
+    "ReturnUrl": "https://rhythmhavenapi.azurewebsites.net/payment/vnpay-return"
     //"ReturnUrl": "https://localhost:7101/payment/VNpayReturn"
   },
   "IpRateLimiting": {
